2003-11-03 Jackson Harper <jackson@ximian.com>

	* Repeater.cs: Always set alternating items to the AlternatingItem
	type, when instantiating alternating items use the itemTemplate if
	the alternatingItem template is null. This matches MS behavoir and
	fixes bug #50157.
	
2003-11-03 Jackson Harper <jackson@ximian.com>

	* DataGridPagerStyle.cs: Name of view state attribute is
	PagerVisible not Visible. Call owner.OnPagerChanged when the pager
	visibility is changed. Patch by Yaron Shkop.
	
2003-11-03 Jackson Harper <jackson@ximian.com>

	* RepeatInfo.cs: When doing horizontal rendering use the repeat
	columns as the number of columns in a row. This fixes bug #49016.
	
2003-11-03 Jackson Harper <jackson@ximian.com>

	* PagedDataSource.cs (PageCount): Return page count of 1 if there
	paging is disabled. Patch by Yaron Shkop.
	* PagedDataSource.cs (CopyTo): Improve. Patch by Yaron Shkop.
	* TableStyle.cs (AddAttributesToRender): Render border style
	collapse. Patch by Yaron Shkop.
	* TableStyle.cs:
	* TableItemStyle.cs:
	* DataGridPagerStyle.cs: Call base copy and merge even if style is of
	the wrong type. Patch by Yaron Shkop.	
	
2003-11-03 Jackson Harper <jackson@ximian.com>

	* BoundColumn.cs: Render readonly columns. Patch by Mohammad DAMT.
	
2003-11-02 Ben Maurer  <bmaurer@users.sourceforge.net>

	* BulletStyle.cs:
	* BulletedListDisplayMode.cs:
	* BulletedListEventHandler.cs:
	* BulletedList.cs:
	* BulletedListEventArgs.cs: V2 controls (yay!)

2003-10-30 Jackson Harper <jackson@ximian.com>

	* Repeater.cs: Throw an exception if the datasource is set to
	something that does not implement either IListSource or
	IEnumerable. This fixes bug #50155.
	
2003-10-30 Jackson Harper <jackson@ximian.com>

	* DataGridPagerStyle.cs: Do not allow page button counts to be set
	to less then 1. Patch by Yaron Shkop. This fixes bug #50236.
	
2003-10-29 Jackson Harper <jackson@ximian.com>

	* ButtonColumn.cs: Format string and text to format were
	inversed. This fixes bug #50171.
	