@@ -1,5 +1,10 @@
 2003-11-03 Jackson Harper <jackson@ximian.com>
 
+	* TemplateColumn.cs: If the item is selected but there is no
+	editItemTemplate use the itemTemplate. This matches MS behvoir.
+	
+2003-11-03 Jackson Harper <jackson@ximian.com>
+
 	* Repeater.cs: Always set alternating items to the AlternatingItem
 	type, when instantiating alternating items use the itemTemplate if
 	the alternatingItem template is null. This matches MS behavoir and
